Adding experience & general information with transitions

--- a/index.html
+++ b/index.html
@@ -3,12 +3,48 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hamza's Portfolio</title>
+  <title>Hamza Salahuddin | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Hello, I'm Hamza 👋</h1>
-  <p>Welcome to my portfolio!</p>
+  <header>
+    <h1>Hamza Salahuddin</h1>
+    <p>Cybersecurity-Driven Computer Science Student</p>
+  </header>
+
+  <main>
+    <section class="fade-in">
+      <h2>Objective</h2>
+      <p>Passionate and driven undergraduate seeking a cybersecurity internship at CrowdStrike...</p>
+    </section>
+
+    <section class="fade-in">
+      <h2>Education</h2>
+      <ul>
+        <li><strong>Georgia Southern University</strong> — B.Sc. Computer Science (2022 – Present)</li>
+        <li><strong>Georgia Military College</strong> — A.Sc. Computer Science (2020 – 2022)</li>
+        <li><strong>Birkerød Gymnasium</strong> — IGCSE (2017 – 2019)</li>
+      </ul>
+    </section>
+
+    <section class="fade-in">
+      <h2>Technical Skills</h2>
+      <p>SQL, C#, JS, Python, HTML, CSS, Java, Assembly(x86), PostgreSQL, React Native, Django...</p>
+    </section>
+
+    <section class="fade-in">
+      <h2>Experience</h2>
+      <ul>
+        <li><strong>Flight Booking App</strong> — CRUD, REST, PostgreSQL, HTML/CSS</li>
+        <li><strong>DFA Checker</strong> — Java & Python implementation</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>📍 Statesboro, GA • 📞 478-305-1808 • 📧 hs14235@georgiasouthern.edu</p>
+  </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
