Added transitions, navbar highlight

--- a/index.html
+++ b/index.html
@@ -6,43 +6,50 @@
   <title>Hamza Salahuddin | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+<nav>
+  <a href="#intro">Home</a>
+  <a href="#objective">Objective</a>
+  <a href="#education">Education</a>
+  <a href="#skills">Skills</a>
+  <a href="#projects">Projects</a>
+  <a href="#contact">Contact</a>
+</nav>
+
 <body>
-  <header>
+
+  <section id="intro" class="section">
     <h1>Hamza Salahuddin</h1>
-  </header>
+    <p>Aspringly arduous Computer Science International Student</p>
+  </section>
 
-  <main>
-    <section class="fade-in">
-      <h2>Objective</h2>
-      <p>Passionate and driven undergraduate seeking a cybersecurity internship at CrowdStrike...</p>
-    </section>
+  <section id="objective" class="section">
+    <h2>Objective</h2>
+  </section>
 
-    <section class="fade-in">
-      <h2>Education</h2>
-      <ul>
-        <li><strong>Georgia Southern University</strong> — B.Sc. Computer Science (2022 – Present)</li>
-        <li><strong>Georgia Military College</strong> — A.Sc. Computer Science (2020 – 2022)</li>
-        <li><strong>Birkerød Gymnasium</strong> — IGCSE (2017 – 2019)</li>
-      </ul>
-    </section>
+  <section id="education" class="section">
+    <h2>Education</h2>
+    <ul>
+      <li><strong>Georgia Southern University</strong> — B.Sc. CS (2022 – Present)</li>
+      <li><strong>Georgia Military College</strong> — A.Sc. CS (2020 – 2022)</li>
+      <li><strong>Birkerød Gymnasium</strong> — IGCSE (2017 – 2019)</li>
+    </ul>
+  </section>
 
-    <section class="fade-in">
-      <h2>Technical Skills</h2>
-      <p>SQL, C#, JS, Python, HTML, CSS, Java, Assembly(x86), PostgreSQL, React Native, Django...</p>
-    </section>
+  <section id="skills" class="section">
+    <h2>Technical Skills</h2>
+    <p>SQL, C#, JS, Python, HTML, CSS, Java, Assembly(x86), PostgreSQL, React Native, Django</p>
+  </section>
 
-    <section class="fade-in">
-      <h2>Experience</h2>
-      <ul>
-        <li><strong>Flight Booking App</strong> — CRUD, REST, PostgreSQL, HTML/CSS</li>
-        <li><strong>DFA Checker</strong> — Java & Python implementation</li>
-      </ul>
-    </section>
-  </main>
+  <section id="projects" class="section">
+    <h2>Projects</h2>
+    <p><strong>Flight Booking App</strong> — CRUD, REST, PostgreSQL, HTML/CSS</p>
+    <p><strong>DFA Checker</strong> — Java & Python implementation</p>
+  </section>
 
-  <footer>
+  <section id="contact" class="section">
+    <h2>Contact</h2>
     <p>📍 Statesboro, GA • 📞 478-305-1808 • 📧 hs14235@georgiasouthern.edu</p>
-  </footer>
+  </section>
 
   <script src="script.js"></script>
 </body>
