added experience & soft skills

--- a/index.html
+++ b/index.html
@@ -19,19 +19,20 @@
 
   <section id="intro" class="section">
     <h1>Hamza Salahuddin</h1>
-    <p>Aspringly arduous Computer Science International Student</p>
+    <p>Optimized-focus, robust & goal-oriented programmer/p>
   </section>
 
   <section id="objective" class="section">
     <h2>Objective</h2>
+    <p>Relentlessly iterative developer with a passion for building resilient, efficient systems. Currently seeking internship opportunities to apply my experience in CRUD development, REST APIs, and multi-language software design in environments that encourage creativity and continuous learning</p>
   </section>
 
   <section id="education" class="section">
     <h2>Education</h2>
     <ul>
-      <li><strong>Georgia Southern University</strong> — B.Sc. CS (2022 – Present)</li>
-      <li><strong>Georgia Military College</strong> — A.Sc. CS (2020 – 2022)</li>
-      <li><strong>Birkerød Gymnasium</strong> — IGCSE (2017 – 2019)</li>
+      <p><strong>Georgia Southern University — B.Sc. CS (2022 – Present)</strong></p>
+      <p><strong>Georgia Military College — A.Sc. CS (2020 – 2022)</strong></p>
+      <p><strong>Birkerød Gymnasium — IGCSE (2017 – 2019)</strong></p>
     </ul>
   </section>
 
@@ -44,6 +45,18 @@
     <h2>Projects</h2>
     <p><strong>Flight Booking App</strong> — CRUD, REST, PostgreSQL, HTML/CSS</p>
     <p><strong>DFA Checker</strong> — Java & Python implementation</p>
+  </section>
+
+  <section id="experience" class"section">
+    <h2>Exeperiences</h2>
+    <p>Student Assistant - Georgia State University (2022-2023)</p>
+    <p>Unpaid Intern - Gallant Sdn Bhd (2019-2020)</p>
+  </section>
+
+  <section id = "softskills" class"softskills>
+    <h2>Soft Skills</h2>
+    <p>Languages (fluent): English, Malay, & Urdu</p>
+    <p>Languages (classroom study): Danish</p>
   </section>
 
   <section id="contact" class="section">
