--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
     <p><strong>DFA Checker</strong> — Java & Python implementation</p>
   </section>
 
-  <section id="experience" class"section">
+  <section id="experience" class="section">
     <h2>Exeperiences</h2>
     <p>Student Assistant - Georgia State University (2022-2023)</p>
     <p>Unpaid Intern - Gallant Sdn Bhd (2019-2020)</p>
   </section>
 
-  <section id = "softskills" class"softskills>
+  <section id = "softskills" class="section">
     <h2>Soft Skills</h2>
     <p>Languages (fluent): English, Malay, & Urdu</p>
     <p>Languages (classroom study): Danish</p>
@@ -61,7 +61,7 @@
 
   <section id="contact" class="section">
     <h2>Contact</h2>
-    <p>📍 Statesboro, GA • 📞 478-305-1808 • 📧 hs14235@georgiasouthern.edu</p>
+    <p>github.com/hs14235 • 📞 478-305-1808 • 📧 hs14235@georgiasouthern.edu</p>
   </section>
 
   <script src="script.js"></script>
