Add animated skill bubbles to technical skills section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <section id="intro" class="section">
     <h1>Hamza Salahuddin</h1>
-    <p>Optimized-focus, robust & goal-oriented programmer/p>
+    <p>Optimized-focus, robust & goal-oriented programmer</p>
   </section>
 
   <section id="objective" class="section">
@@ -38,19 +38,33 @@
 
   <section id="skills" class="section">
     <h2>Technical Skills</h2>
-    <p>SQL, C#, JS, Python, HTML, CSS, Java, Assembly(x86), PostgreSQL, React Native, Django</p>
+    <div class="bubble-container">
+      <span class="bubble">SQL</span>
+      <span class="bubble">PHP</span>
+      <span class="bubble">JavaScript</span>
+      <span class="bubble">Python</span>
+      <span class="bubble">HTML</span>
+      <span class="bubble">CSS</span>
+      <span class="bubble">Java</span>
+      <span class="bubble">Assembly(x86)</span>
+      <span class="bubble">PostgreSQL</span>
+      <span class="bubble">C#</span>
+      <span class="bubble">React Native</span>
+      <span class="bubble">Django</span>
+    </div>
+    
   </section>
 
   <section id="projects" class="section">
     <h2>Projects</h2>
-    <p><strong>Flight Booking App</strong> — CRUD, REST, PostgreSQL, HTML/CSS</p>
-    <p><strong>DFA Checker</strong> — Java & Python implementation</p>
+    <p><strong>Flight Booking App</strong> — Spring, CRUD, REST, & PostgreSQL</p>
+    <p><strong>DFA Checker</strong> — Finished in Java & Python</p>
   </section>
 
   <section id="experience" class="section">
-    <h2>Exeperiences</h2>
+    <h2>Experiences</h2>
     <p>Student Assistant - Georgia State University (2022-2023)</p>
-    <p>Unpaid Intern - Gallant Sdn Bhd (2019-2020)</p>
+    <p>Intern - Gallant Sdn Bhd (2019-2020)</p>
   </section>
 
   <section id = "softskills" class="section">
@@ -65,5 +79,7 @@
   </section>
 
   <script src="script.js"></script>
+  <a href="Hamza_Resume.pdf" class="resume-btn" download>📄 Download Resume</a>
+
 </body>
 </html>
