Bubble added to technical skills properly

--- a/index.html
+++ b/index.html
@@ -39,19 +39,21 @@
   <section id="skills" class="section">
     <h2>Technical Skills</h2>
     <div class="bubble-container">
-      <span class="bubble">SQL</span>
-      <span class="bubble">PHP</span>
-      <span class="bubble">JavaScript</span>
-      <span class="bubble">Python</span>
-      <span class="bubble">HTML</span>
-      <span class="bubble">CSS</span>
-      <span class="bubble">Java</span>
-      <span class="bubble">Assembly(x86)</span>
-      <span class="bubble">PostgreSQL</span>
-      <span class="bubble">C#</span>
-      <span class="bubble">React Native</span>
-      <span class="bubble">Django</span>
+      <span class="bubble" style="top:10%; left:15%;">SQL</span>
+      <span class="bubble" style="top:20%; left:60%;">PHP</span>
+      <span class="bubble" style="top:30%; left:30%;">JavaScript</span>
+      <span class="bubble" style="top:40%; left:70%;">Python</span>
+      <span class="bubble" style="top:50%; left:10%;">HTML</span>
+      <span class="bubble" style="top:60%; left:50%;">CSS</span>
+      <span class="bubble" style="top:70%; left:20%;">Java</span>
+      <span class="bubble" style="top:75%; left:65%;">PostgreSQL</span>
+      <span class="bubble" style="top:15%; left:80%;">C#</span>
+      <span class="bubble" style="top:85%; left:40%;">React Native</span>
+      <span class="bubble" style="top:25%; left:85%;">Django</span>
+      <span class="bubble" style="top:35%; left:5%;">Assembly</span>
     </div>
+  </section>
+  
     
   </section>
 
