--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
           </div>
 
           <div class='about-btns'>
-           <a target="_blank" href='/images/Hamza_Salahuddin_Resume.docx' class='btn-custom btn-color' download='Hamza_Salahuddin_Resume.docx'>
-              Download Resume (DOCX)
+           <a target="_blank" href='/images/Hamza_Salahuddin_Resume.pdf' class='btn-custom btn-color' download='Hamza_Salahuddin_Resume.pdf'>
+              Download Resume (PDF)
             </a>
             <small style="display:block;margin-top:.5rem">
-              <a target="_blank" href='/images/Hamza_Salahuddin_Resume.docx'>ATS Version (.docx)</a>
+              <a target="_blank" href='/images/Hamza_Salahuddin_Resume.pdf'>ATS Version (.docx)</a>
             </small>
           </div>
         </div>
