--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               Download Resume (PDF)
             </a>
             <small style="display:block;margin-top:.5rem">
-              <a target="_blank" href='/images/Hamza_Salahuddin_Resume.pdf'>ATS Version (.docx)</a>
+              <a target="_blank" href='/images/Hamza_Salahuddin_Resume.docx'>ATS Version (.docx)</a>
             </small>
           </div>
         </div>
