Center projects grid and fix header layout

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Hamza Salahuddin — Portfolio</title>
   <meta name="description" content="Computer Science student and ACM Vice President with experience in full-stack development, relational databases, and technical leadership.">
   <link rel="canonical" href="https://hs14235.github.io/">
-  <meta name="robots" content="index,follow">
+  <meta name="robots" content="index, follow">
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
@@ -22,6 +22,11 @@
   <meta name="twitter:title" content="Hamza Salahuddin — Portfolio">
   <meta name="twitter:description" content="ACM Vice President • Full-stack development • Databases • Software engineering">
   <meta name="twitter:image" content="https://hs14235.github.io/images/og-cover.png">
+
+  <meta name="keywords"
+    content="Hamza Salahuddin, Hamza Salahuddin portfolio, web developer portfolio, computer science student, full stack developer, web design, HTML, CSS, JavaScript, GitHub Pages portfolio">
+
+  <meta name="author" content="Hamza Salahuddin">
 
   <!-- Styles (keep one Bootstrap + theme CSS used by your template) -->
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
@@ -258,11 +263,12 @@
           <div class="service-thumb">
             <i class="fa fa-train" style="font-size:45px; padding-left:15px;"></i>
             <h4 class="white-color">Trainline</h4>
-            <p>Full-stack booking app (Django REST API, React, MySQL). Auth, seat selection, ticketing, transactions, notifications, chat. Normalized DB schema (User, Ticket, Passenger, Payment, Notifications).</p>
+            <p>Full-stack booking app (Django REST API, React, Docker). Auth, seat selection, ticketing, transactions, notifications, chat. Normalized DB schema (User, Ticket, Passenger, Payment, Notifications).</p>
             <div class="skill-container">
               <button class="skill"><h6>Django</h6></button>
               <button class="skill"><h6>React</h6></button>
-              <button class="skill"><h6>MySQL</h6></button>
+              <button class="skill"><h6>Docker</h6></button>
+              <button class="skill"><h6>PostgreSQL</h6></button>
             </div>
           </div>
         </a>
@@ -284,14 +290,29 @@
       </div>
 
       <div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.4s">
+        <a target="_blank" href="https://github.com/hs14235/meeting-to-tasks">
+          <div class="service-thumb">
+            <i class="fa fa-sitemap" style="font-size:45px; padding-left:15px;"></i>
+            <h4 class="white-color">Meeting to Tasks</h4>
+            <p>Converts raw transcripts  &amp; into actionable tasks.</p>
+            <div class="skill-container">
+            <button class="skill"><h6>Ollama (phi3:mini)</h6></button>
+            <button class="skill"><h6>FAISS</h6></button>
+            <button class="skill"><h6>Github REST API</h6></button>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.4s">
         <a target="_blank" href="https://github.com/hs14235/hs14235.github.io">
           <div class="service-thumb">
             <i class="fa fa-sitemap" style="font-size:45px; padding-left:15px;"></i>
             <h4 class="white-color">Personal Website</h4>
             <p>Portfolio of academic &amp; career endeavors.</p>
             <div class="skill-container">
-              <button class="skill"><h6>HTML</h6></button>
-              <button class="skill"><h6>Python</h6></button>
+              <button class="skill"><h6>HTML/CSS</h6></button>
+              <button class="skill"><h6>JavaScript</h6></button>
             </div>
           </div>
         </a>
