Changes to description & updated resume to current skill levels

--- a/index.html
+++ b/index.html
@@ -119,7 +119,13 @@
         <div class='col-md-8'>
           <div class='about-text'>
             <p>
-              Curious & scrupulous wannabe student with experience in full-stack development, relational databases, and technical leadership. I enjoy building practical software—front to back—and working with teams to ship clean, reliable features.
+              Computer Science student and ACM Vice President with hands-on experience in full-stack web development, relational
+              databases, and technical leadership. I build end-to-end software systems with an emphasis on clean architecture,
+              reliability, and real-world usability.
+              
+              My experience spans Python, Java, JavaScript, React, Django, .NET, SQL (PostgreSQL/MySQL), and Spring. I am currently
+              developing Trainline, a full-stack booking platform that showcases database design, authentication, transactional
+              workflows, and user-centric system design.
             </p>
             <p>
               Tech stack includes Python, Java, JavaScript, React, Django, .NET, SQL (PostgreSQL/MySQL), and Spring. I’m currently focused on Trainline, a full-stack booking app that demonstrates DBMS design, authentication, transactions, and user workflows.
