--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               workflows, and user-centric system design.
             </p>
             <p>
-              Tech stack includes Python, Java, JavaScript, React, Django, .NET, SQL (PostgreSQL/MySQL), and Spring. I’m currently focused on Trainline, a full-stack booking app that demonstrates DBMS design, authentication, transactions, and user workflows.
+              Tech stack includes Python, Java, JavaScript, React, Django, .NET, SQL (PostgreSQL/MySQL), and Spring. I am also doing the AWS GenerativeAI certification to deepen my knowledge of cloud computing and AI integration.
             </p>
           </div>
 
